# fast-file-tracker

./: .gitignore  Cargo.toml  README.md
src/: main.rs
