[package]
name = "fs-checker-xxhash"
version = "0.1.0"
authors = ["Ben Edridge <BenEdridge@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.6.0"
rayon = "1.1"
redis = "0.17.0"
walkdir = "2"
jwalk = "0.5"
memmap = "0.7.0"

[profile.release]
debug = false
debug-assertions = false
opt-level = "z"
lto = "fat"
codegen-units = 1

# https://deterministic.space/high-performance-rust.html
panic = "abort"

[profile.dev.package."*"]
opt-level = "z"